--- a/docs/style.css
+++ b/docs/style.css
@@ -1,25 +1,42 @@
 
+/*
+    Palette:
+    #fff    white   content background
+    #274C77 blue    menu background
+    #ccc    grey    menu text
+*/
+
 /* Reset browser presets */
 *{
     padding: 0px;
     margin: 0px;
     border: 0px;
     color: black;
+    font-family: 'Roboto', sans-serif;
 }
 
 body{
     height: 100vh;
 }
 
+/* Menu section */
+
 .menu__container{
     position: fixed;
     top: 0px;
     left: 0px;
+    bottom: 0px;
     width: 15%;
+    background-color: #274C77;
+    padding: 10px 0 0 10px;
+}
+
+#menu__title{
+    color: #fff;
 }
 
 .menu__list{
-    padding: 10px 20px;
+    padding: 10px 10px;
 }
 
 .menu__item{
@@ -29,10 +46,27 @@ body{
 .menu__item a{
     display: block;
     padding: 5px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #ccc;
+
 }
 
+.menu__item a:hover{
+    color: #fff;
+}
+
+/* Content section */
+
 .content{
+    height: 100vh;
     margin-left: 15%;
+    padding: 20px 0 0 20px;
+    background-color: #fff;
+}
+
+#content__title{
+    text-align: center;
 }
 
 section{
@@ -45,10 +79,9 @@ p{
     font-size: 18px;
 }
 
-a, a:visited{
-    color: black;
-}
-
 img{
     max-width: 80%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
