--- a/docs/style.css
+++ b/docs/style.css
@@ -8,7 +8,6 @@
 
 /* Reset browser presets */
 *{
-    padding: 0px;
     margin: 0px;
     border: 0px;
     color: black;
@@ -73,15 +72,16 @@ section{
     margin: 20px 0;
 }
 
-p{
-    width: 90%;
-    margin: 0 auto 0 auto;
-    font-size: 18px;
-}
-
 img{
     max-width: 80%;
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.post{
+    width: 90%;
+    margin: 0 auto 0 auto;
+    font-size: 18px;
+
 }
