Added footer content

--- a/template/index.html
+++ b/template/index.html
@@ -9,12 +9,12 @@
     <title>Ethib</title>
 </head>
 <body>
-    <header class="pageHeader">
+    <header class="page-header">
         <section class="logo">
             ETHIB
         </section>
         <form method="GET" action="" class="search-box">
-            <input type="text" class="search-input" placeholder="George Orwell">
+            <input type="text" class="search-input" placeholder="George Orwell" name="query">
             <input type="submit" class="search-button" value="&#128269;">
         </form>
         <nav class="navbar">
@@ -26,8 +26,17 @@
         </nav>
     </header>
 
-    <footer>
+    <main class="page-content">
 
+    </main>
+
+    <footer class="page-footer">
+        <p class="footer-content">
+            Fork me on
+        </p>
+        <a href="https://github.com/drw0if/ethib">
+            <img src="media/images/github-mark.png">
+        </a>
     </footer>
 
     <script>
