--- a/template/style.css
+++ b/template/style.css
@@ -6,6 +6,7 @@ html, body{
     height: 100%;
     display: flex;
     flex-direction: column;
+    font-family: sans-serif;
 }
 
 .page-header{
@@ -83,6 +84,8 @@ html, body{
 
 .page-content{
     flex-grow: 2;
+    width: 80%;
+    margin: 0px auto;
 }
 
 .page-footer{
