--- a/template/style.css
+++ b/template/style.css
@@ -9,6 +9,10 @@ html, body{
     font-family: sans-serif;
 }
 
+.center{
+    text-align: center;
+}
+
 .page-header{
     display: flex;
     flex-direction: row;
@@ -86,6 +90,7 @@ html, body{
     flex-grow: 2;
     width: 80%;
     margin: 0px auto;
+    display: flex;
 }
 
 .page-footer{
@@ -105,4 +110,55 @@ html, body{
     color: #c8d6e5;
     font-family: monospace;
     margin-right: 5px;
+}
+
+.splitted-container{
+    margin: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.splitted-container div{
+    width: 50%;
+}
+
+.form-input{
+    display: block;
+    margin: 20px auto;
+    border: none;
+    outline-color: black;
+    padding: 10px;
+}
+
+.form-button{
+    border-radius: 10px;
+    outline: none;
+    font-size: 1em;
+    padding: 7px;
+    background-color:#ee5253;
+    color: white;
+}
+
+
+.form-container{
+    background-color: #eee;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.redirect-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #576574;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    color: #fff;
+}
+
+.redirect-container a{
+    text-decoration: none;
 }
