--- a/template/style.css
+++ b/template/style.css
@@ -91,6 +91,9 @@ html, body{
     width: 80%;
     margin: 0px auto;
     display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .page-footer{
@@ -114,15 +117,15 @@ html, body{
 
 .splitted-container{
     margin: auto;
-    width: 100%;
     display: flex;
     flex-direction: row;
     border-radius: 10px;
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
-.splitted-container div{
+.splitted-container > div{
     width: 50%;
+    padding: 50px;
 }
 
 .form-input{
@@ -142,17 +145,22 @@ html, body{
     color: white;
 }
 
+.form-background{
+    background-color: #eee;
+}
 
 .form-container{
-    background-color: #eee;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
 
-.redirect-container{
+.centered-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.redirect-container{
     background-color: #576574;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -166,4 +174,63 @@ html, body{
 .error-banner{
     margin: 10px auto;
     color: red;
+}
+
+label .form-input{
+    display: inline;
+}
+
+.row{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+#file-label{
+    margin: 50px;
+    cursor: pointer;
+    width: 200px;
+    height: 282.84px;
+    border: 1px solid black;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#file-label h2{
+    overflow: hidden;
+}
+
+#file-input{
+    width: 0.1px;
+    height: 0.1px;
+    visibility: hidden;
+}
+
+#progress-bar{
+    width: 100%;
+    margin: 20px;
+    border: 1px solid black;
+}
+
+#progress-bar > div{
+    background-color: green;
+    height: 1em;
+}
+
+#progress-bar-label{
+    margin: 0px;
+    position: absolute;
+    left: 50%;
+    z-index: 1;
+}
+
+.d-block{
+    display: block;
+}
+
+.padded-container{
+    padding: 20px;
 }
