--- a/template/style.css
+++ b/template/style.css
@@ -18,6 +18,7 @@ html, body{
 .padded-container{ padding: 20px; }
 .background-red{ background-color:#ee5253; }
 .text-white{ color: white; }
+.show{ display: block; }
 
 /*                      Building blocks                      */
 .row{ width: 100%; display: flex; flex-direction: row; justify-content: center; }
@@ -151,6 +152,7 @@ label .form-input{
 
 /* Start Modal */
 .modal{
+    display: none;
     position: fixed;
     top: 0;
     left: 0;
@@ -216,5 +218,9 @@ label .form-input{
     border-radius: 10px;
     padding: 10px;
     margin: 5px;
+}
+
+.modal-text{
+    padding: 10px;
 }
 /* End Modal */
