--- a/template/style.css
+++ b/template/style.css
@@ -13,12 +13,8 @@ html, body{
 /*                      Building blocks                      */
 .row{ width: 100%; display: flex; flex-direction: row; justify-content: space-evenly; }
 .error-banner{ margin: 10px auto; color: red; }
-.col{
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-}
+.col{ display: flex; flex-direction: column; justify-content: space-evenly; }
+
 /*                      Sections                      */
 
 /* Start header */
@@ -251,6 +247,15 @@ label .form-input{
     text-decoration: none;
 }
 
+.description-name{
+    font-weight: bold;
+    font-size: 21px;
+}
+.description-value{
+    font-size: 21px;
+    font-style: italic;
+}
+
 /*                      Attributes                      */
 .center{ text-align: center; }
 .form-background{ background-color: #eee; }
@@ -259,3 +264,6 @@ label .form-input{
 .background-red{ background-color:#ee5253; }
 .text-white{ color: white; }
 .show{ display: block; }
+.space-between{ justify-content: space-between; }
+.p-10{ padding: 10px; }
+.flex-center{ justify-content: center; }
