--- a/template/style.css
+++ b/template/style.css
@@ -243,13 +243,18 @@ label .form-input{
 .book-button{
     align-self: center;
     border-radius: 10px;
+    outline: none;
+    border: none;
+    color: white;
+    cursor: pointer;
 }
 
 .book-button *{
-    color: white;
+    color: inherit;
     display: block;
     padding: 15px;
     text-decoration: none;
+    margin: 0px;
 }
 
 .description-name{
@@ -302,6 +307,17 @@ label .form-input{
 
 .review-text{
     padding: 20px;
+}
+
+#toast {
+    position: fixed;
+    bottom: 10px;
+    left: 10px;
+    background-color: #131516;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    display: none;
 }
 
 /*                      Attributes                      */
