--- a/template/style.css
+++ b/template/style.css
@@ -72,7 +72,7 @@ html, body{ margin: 0px; padding: 0px; min-height: 100vh; display: flex; flex-di
 /* End progress bar */
 
 /* Start Modal */
-.modal{ display: none; position: fixed; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; }
+.modal{ display: none; position: fixed; top: 0; left: 0; z-index: 1; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.75); }
 .modal-dialog { display: flex; flex-direction: column; height: 100%; width: 100%; }
 .modal-content{ border: 1px solid black; border-radius: 10px; margin: auto; background-color: white; }
 .modal header{ padding: 5px; display: flex; flex-direction: row; justify-content: space-between; }
@@ -139,3 +139,18 @@ html, body{ margin: 0px; padding: 0px; min-height: 100vh; display: flex; flex-di
 /*                      MISC                          */
 textarea{ resize: none; }
 label .form-input{ display: inline; }
+#clip{
+    position: fixed;
+    right: 20px;
+    bottom: 100px;
+    font-size: 30px;
+    background-color: #576574;
+    border-radius: 10px;
+    height: 40px;
+    width: 40px;
+    border-radius: 40px;
+    padding: 10px;
+    text-align: center;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    cursor: pointer;
+}
